CSS Essentials Checkpoint

--- a/css-essentials/index.html
+++ b/css-essentials/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ayo's Resume | Home</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- Navbar -->
-
     <nav class="">
       <span class="logo"><a href="./index.html">DEV DOSWIN</a></span>
       <ul>
@@ -42,10 +47,23 @@
     <section id="about">
       <h2>About Me</h2>
       <p>
-        I'm an aspiring Fullstack Web Developer who is enthusiastic about the process of developing products that address user issues with particular needs in a given market and who has an interest in human-centered approaches and human behavior. Below is my favorite youtube video at the moment
+        I'm an aspiring Fullstack Web Developer who is enthusiastic about the
+        process of developing products that address user issues with particular
+        needs in a given market and who has an interest in human-centered
+        approaches and human behavior. Below is my favorite youtube video at the
+        moment
       </p>
       <div>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/Gx8YJFNJGDg?si=SFs35qyRrIYu0XJS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/Gx8YJFNJGDg?si=SFs35qyRrIYu0XJS"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
       </div>
     </section>
 
