Completed the Bootsrap: Travel Agency Website

--- a/css-essentials/index.html
+++ b/css-essentials/index.html
@@ -144,5 +144,10 @@
       </div>
       <p>&copy; Copyright 2024 Made with Love</p>
     </footer>
+
+    <!-- Assignment -->
+     <div class="ass">
+      <p>Ronaldo</p>
+     </div>
   </body>
 </html>
