Completed the Bootsrap: Online Store Website

--- a/Bootstrap/store-landing-page/index.html
+++ b/Bootstrap/store-landing-page/index.html
@@ -10,19 +10,22 @@
     <!-- Header Section -->
     <header class="header">
         <nav class="navbar">
-            <a href="#" class="logo">Online Store</a>
+            <a href="#" class="logo">Nike Store</a>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#products">Products</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
+            <div class="menu">
+                <img src="./assets/menuIcon.png" class="menuIcon" alt="">
+            </div>
         </nav>
     </header>
 
     <!-- Hero Section -->
     <section class="hero" id="home">
         <div class="hero-content">
-            <h1>Welcome to Our Store</h1>
+            <h1>Welcome to Nike Store</h1>
             <p>Find the best products at unbeatable prices.</p>
             <a href="#products" class="btn">Shop Now</a>
         </div>
@@ -34,31 +37,31 @@
         <div class="product-grid">
             <!-- Product Card 1 -->
             <div class="product-card">
-                <img src="product1.jpg" alt="Product 1">
-                <h3>Product 1</h3>
-                <p>A brief description of Product 1.</p>
+                <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/eckrubea0rzraob24xzf/AIR+FORCE+1+FLYKNIT+2.0.png" alt="Product 1">
+                <h3>Nike Air Force 1 Flyknit 2.0</h3>
+                <p>N 200,399.95</p>
                 <a href="#" class="btn">Shop Now</a>
             </div>
             <!-- Repeat for other product cards -->
             <!-- Product Card 2 -->
             <div class="product-card">
-                <img src="product2.jpg" alt="Product 2">
-                <h3>Product 2</h3>
-                <p>A brief description of Product 2.</p>
+                <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/ae71ec57-7f48-4882-8870-84467f902d30/NIKE+AIR+FORCE+1+JEWEL.png" alt="Product 2">
+                <h3>Nike Air Force 1</h3>
+                <p>N 255,599.95</p>
                 <a href="#" class="btn">Shop Now</a>
             </div>
             <!-- Product Card 3 -->
             <div class="product-card">
-                <img src="product3.jpg" alt="Product 3">
-                <h3>Product 3</h3>
-                <p>A brief description of Product 3.</p>
+                <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/67151472-8bd0-46cd-9f87-c6bda52a89ad/AIR+FORCE+1+%2707.png" alt="Product 3">
+                <h3>Nike Air Force 1 '07</h3>
+                <p>N 257,399.95</p>
                 <a href="#" class="btn">Shop Now</a>
             </div>
             <!-- Product Card 4 -->
             <div class="product-card">
-                <img src="product4.jpg" alt="Product 4">
-                <h3>Product 4</h3>
-                <p>A brief description of Product 4.</p>
+                <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/6e4865b4-4819-4ad0-be06-6e713c92e163/W+AF1+SHADOW.png" alt="Product 4">
+                <h3>Nike Air Force 1</h3>
+                <p>N 260,599.95</p>
                 <a href="#" class="btn">Shop Now</a>
             </div>
         </div>
@@ -66,7 +69,7 @@
 
     <!-- Footer Section -->
     <footer class="footer">
-        <p>&copy; 2024 Online Store. All rights reserved.</p>
+        <p>&copy; 2024 Nike Store. All rights reserved.</p>
     </footer>
 
 </body>
